fixed database issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -206,12 +206,16 @@
 	</div>
 
 </div>
-
+<br>
+<br>
+	<br>
+	<br>
+	<br>
 <div class="row pad">
 	<div class="col-lg-12">
 		<div class="panel panel-default">
 			<div class="panel-body text-center">
-				<p>At <strong><em>Trendy Fashion Store</em></strong>, we offer 24 hours service.</p> 
+				<p>At <strong><em>Maipi Fashion Store</em></strong>, we offer 24 hours service.</p>
 				<p>We offer 7-day money back gurantee and we take buyer protection seriously.</p> 
 				<p>All our products are of the highest grade.</p>
 			</div>
@@ -219,3 +223,5 @@
 	</div>
 </div>
 {% endblock %}
+
+</div>
