--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -15,9 +15,9 @@
 		<ul class="summary">
 			<li class="">Pending Orders <span class="badge">5</span></li>
 			<li class="">Completed Orders <span class="badge">3</span></li>
-			<li class="">Products In Stock <span class="badge">7</span></li>
-			<li class="">Products Out of Stock <span class="badge">11</span></li>
-			<li class="">Total Products <span class="badge">90</span></li>
+			<li class="">Products In Stock <span class="badge">{{products_available}}</span></li>
+			<li class="">Products Out of Stock <span class="badge">{{(products|length) - products_available}}</span></li>
+			<li class="">Total Products <span class="badge">{{products|length}}</span></li>
 		</ul>
 	</div>
 </div>
@@ -41,36 +41,16 @@
 						<tr>
 							<td>1</td>
 							<td><a href="./view-order.html">EF45AVH</a></td>
-							<td>Peter Holland</td>
-							<td>&dollar;50.99</td>
+							<td>Karabo Maleka</td>
+							<td>50.99</td>
 							<td><span class="badge">Awaiting Payment</span></td>
 						</tr>
-						<tr>
-							<td>2</td>
-							<td><a href="./view-order.html">ZSD03DDC</a></td>
-							<td>Kyle Jenner</td>
-							<td>&dollar;43.99</td>
-							<td><span class="badge">Awaiting Payment</span></td>
-						</tr>
-						<tr>
-							<td>3</td>
-							<td><a href="./view-order.html">KDJDPE2</a></td>
-							<td>Daniel Monroe</td>
-							<td>&dollar;29.99</td>
-							<td><span class="badge">Awaiting Payment</span></td>
-						</tr>
-						<tr>
-							<td>4</td>
-							<td><a href="./view-order.html">AWDADD22</a></td>
-							<td>Molly Anderson</td>
-							<td>&dollar;22.99</td>
-							<td><span class="badge">Awaiting Payment</span></td>
-						</tr>
+
 						<tr>
 							<td>5</td>
 							<td><a href="./view-order.html">AEEACCC</a></td>
-							<td>James Cane</td>
-							<td>&dollar;100.00</td>
+							<td>Tshepang Maila</td>
+							<td>400</td>
 							<td><span class="badge">Awaiting Payment</span></td>
 						</tr>
 					</tbody>
@@ -95,36 +75,18 @@
 						</tr>
 					</thead>
 					<tbody>
+						{%for p in products%}
+
 						<tr>
-							<td>1</td>
-							<td>Classic Blouse</td>
-							<td>&dollar;35.99</td>
-							<td>45 units</td>
+							<td>{{p.id}}</td>
+							<td>{{p.name}}</td>
+							<td>R{{'%0.2f'| format(p.price|float)}}</td>
+
+							<td>{{p.stock}} units</td>
 						</tr>
-						<tr>
-							<td>2</td>
-							<td>Printed Dress</td>
-							<td>&dollar;23.99</td>
-							<td>25 units</td>
-						</tr>
-						<tr>
-							<td>3</td>
-							<td>Summer Gown</td>
-							<td>&dollar;45.99</td>
-							<td>33 units</td>
-						</tr>
-						<tr>
-							<td>4</td>
-							<td>Summer Printed Dress</td>
-							<td>&dollar;35.99</td>
-							<td>11 units</td>
-						</tr>
-						<tr>
-							<td>5</td>
-							<td>Faded Shorts</td>
-							<td>&dollar;15.99</td>
-							<td>3 units</td>
-						</tr>
+
+						{% endfor %}
+
 					</tbody>
 				</table>
 			</div>
