--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="../">Trendy Fashion Store</a>
+                    <a class="navbar-brand" href="../">Maipi Fashion Store</a>
                 </div>
         
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,7 +52,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="./">Trendy Fashion Store</a>
+                    <a class="navbar-brand" href="./">Maipi Fashion Store</a>
                 </div>
         
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,11 +72,15 @@
         <div class="container" id="page">
 
         {% block body %}{% endblock %}
-            
+             <br></br>
+               <br></br>
+               <br></br>
+               <br></br>
+               <br></br>
             <footer>
                 <div class="row pad">
                     <div class="col-lg-12 text-center">
-                        Copyright &copy; 2017 <strong>Trendy Fashion Store</strong>
+                        Copyright &copy; 2021 <strong>Maipi Fashion Store</strong>
                     </div>
                 </div>
             </footer>
