added single view of the product

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Admin Dashboard | Trendy Fashion Store{% endblock %}
+{% block title %}Admin Dashboard | Maipi Fashion Store{% endblock %}
 
 {% block body %}
 <div class="row pad">
