--- a/templates/view-product.html
+++ b/templates/view-product.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}View Product | Trendy Fashion Store{% endblock %}
+{% block title %}View Product | Maipi Fashion Store{% endblock %}
 
 {% block body %}
 <div class="row">
 	<div class="col-lg-12">
 		<ol class="breadcrumb">
 			<li>
-				<a href="./">Home</a>
+				<a href="{{ url_for('index') }}">Home</a>
 			</li>
 			<li class="active">View Product</li>
 		</ol>
@@ -18,7 +18,7 @@
 	<div class="col-lg-5">
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div class="thumbnail">
-				<img src="{{ url_for('static', filename='imgs/printed-dress_full.jpg') }}" alt="">
+				<img src="{{product.image }}" alt="">
 			</div>
 		</div>
 	</div>
@@ -29,10 +29,10 @@
 				<h3 class="panel-title">Product Details</h3>
 			</div>
 			<div class="panel-body">
-				<h3>Casual Print Dress &nbsp; <small>(In Stock)</small></h3> 
-				<h4>&dollar;45.99</h4>
+				<h3>{{product.name}} &nbsp; <small>(In Stock)</small></h3>
+				<h4>R{{'%0.2f'| format(product.price|float)}}</h4>
 				<hr />
-				This dress is a great fit for making a presence at parties and other occasions where casual wears are allowed
+				{{product.description}}
 				<hr />
 
 				<div class="row">
@@ -69,12 +69,20 @@
 			<!-- Tab panes -->
 			<div class="tab-content">
 				<div role="tabpanel" class="tab-pane active" id="description">
-					<h3>Product Description</h3>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</div>
+					<h3>Detailed Product Description</h3>
+
+					<ul>
+					  `<li>Elastic closure</li>
+					   <li>[MATERIAL]: 95% rayon, 5% spandex, Comfortable, Lightweight, soft with stretchy Fabric.</li>
+					   <li>[FEATURES]: Shorts sleeve dress, Crew neck, Solid color, Flower pattern，Summer dress with pockets, Pleated swing dress, Loose Fit Casual Knee Length Tunic Dress.</li>
+					 ` <li>[OCCASION]: Suitable for leisure, work, home, office, party, evening, vacation, appointment, picnic, shopping, travel, school, daily. Good for spring, autumn and summer wear.</li>
+						<li>Before order, please carefully read the Size Chart we provided in the pictures, Select the size according to it. 2. because of each different of display, brightness and color saturation, please understand a slightly color difference.</li>
+
+					</ul>`
+					</div>
 				<div role="tabpanel" class="tab-pane" id="shipping">
-					<h3>Shipping Details</h3>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<h3>Delivery Details</h3>
+					We offer guaranteed delivery speeds on this products. When guarantee that this order will be delivered within 7 days of purchase, we'll state on the checkout page, with the associated delivery date and cost.
 				</div>
 			</div>
 		</div>
