--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,88 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block title %}View Product | Maipi Fashion Store{% endblock %}
+
+{% block body %}
+
+<div class="row pad">
+	<div class="col-lg-12">
+		<h2 class="bold text-center">Register</h2>
+	</div>
+</div>
+<div class="row">
+	<div class="col-lg-10 col-lg-offset-1">
+		<div class="panel panel-default">
+			<form method="POST" action="{{ url_for('adduser') }}" enctype="multipart/form-data">
+				<div class="panel-body">
+					<div class="row">
+						{{form.csrf_token }}
+						<div class="col-lg-6">
+							<div class="form-group">
+								<label>Name</label>
+
+								{{form.name(class='form-control')}}
+							</div>
+
+							<div class="form-group">
+								<label>Surname</label>
+
+								{{form.surname(class='form-control')}}
+							</div>
+
+							<div class="form-group">
+								<label>Email</label>
+
+								{{form.username(class='form-control')}}
+							</div>
+
+                            	<div class="form-group">
+								<label>Phone</label>
+
+								{{form.phone(class='form-control')}}
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="form-group">
+								<div class="form-group">
+									<label>Address</label>
+
+									{{form.address(class='form-control')}}
+								</div>
+								<div class="form-group">
+									<label>Gender</label>
+
+									{{form.gender(class='form-control')}}
+								</div>
+
+								<div class="form-group">
+									<label>Password</label>
+
+									{{form.password(class='form-control')}}
+								</div>
+								<div class="form-group">
+									<label>Confirm Password</label>
+
+									{{form.conpass(class='form-control')}}
+								</div>
+
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="panel-footer">
+					<button type="submit" class="btn btn-primary">
+						<i class="glyphicon glyphicon-plus-sign"></i> Register
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+{% endblock %}</div>
